[tool.poetry]
name = "yapp-backend-dev"
version = "0.1.0"
description = "Yapp BackEnd Developer Challenge"
authors = ["Felipe Aranguiz"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.17"
mysql-connector-python = "^8.0.20"
SQLAlchemy-serializer = "^1.3.4"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.8.3"
flake8-bugbear = "^20.1.4"
pytest = "^5.4.3"
pytest-mock = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
